# transparency

./: .gitignore  README.md
views/: abstract.md
views/critical/: README.md
views/critical/society/: colour-blindness.md
views/critical/software/python/: list-append-or-extend.ipynb  loop-break-or-check.ipynb
works/academic/2020/computer-science/assignments/arrays/: test.ipynb
works/academic/2020/computer-science/assignments/car-simulator/: carsim.py
works/academic/2020/computer-science/assignments/fox-and-hen/: foxandhen.py
works/academic/2020/computer-science/assignments/week-10/: array.py  c1-tuples.py  c2-arrays.py
works/academic/2020/computer-science/classwork/2d-arrays/: gorgatron.py
works/academic/2020/computer-science/classwork/abstraction/: car-hire.py  rain.py
works/academic/2020/computer-science/classwork/workbook/: 1a.py  1b.py  1c.py  1d.py  2a.py  3b.py
works/academic/2020/mathematics/assignments/five-a-day/: 16-11-2020.ipynb  17-11-2020.ipynb  (+3 more)
works/academic/certifications/gcses/: README.md
works/personal/2020/audits/docker/: jdk.md
works/personal/2021/nrp/: .gitattributes  T_R_Discriminatory_Facial_Recognition.html  T_R_Discriminatory_Facial_Recognition.ipynb  failures.json  matrices.json  pyproject.toml  results.json
works/personal/2021/nrp/src/: analyze.py  az.py  faceplusplus.py  rekognition.py  run.py
works/personal/written/: picture-this.txt  reality.txt  satisfaction.txt
works/personal/written/poetry/: death-and-desire.txt  satisfaction.txt  shades.txt  stardust.txt  supernova.txt  tu-es-luce-stellarum.txt
(+168 files in other folders)
